test/internal/infrastructure/error/code.go
//go:generate stringer -type Code -linecomment
package error

// Code é”™è¯¯å—
type Code int32

const (
	OK         Code = 0
	ParamError Code = 400

	Unauthorized          Code = 1001 // æœªæˆæƒ
	TokenMalformed        Code = 1002 // ä»¤ç‰Œæ ¼å¼é”™è¯¯
	TokenSignatureInvalid Code = 1003 // ä»¤ç‰Œç­¾åéªŒè¯å¤±è´¥
	TokenExpired          Code = 1004 // ä»¤ç‰Œè¿‡æœŸ
	TokenInvalid          Code = 1005 // æ— æ•ˆä»¤ç‰Œ

	ZeroIEntityD Code = 10001 // æ²¡æœ‰å®ä½“ğŸ†”
	NotFoundData Code = 10002 // æœªæ‰¾åˆ°æ•°æ®
)
